LPS-108246 Changing from get to post - assignableUsers
