# modules/apps/headless/headless-admin-workflow/headless-admin-workflow-impl/rest-openapi.yaml
@@ -465,6 +465,14 @@ components:
                     format: int64
                     type: integer
             type: object
+        WorkflowTaskIds:
+            properties:
+                workflowTaskIds:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
+            type: object
         WorkflowTaskAssignableUsers:
             properties:
                 workflowTaskAssignableUsers:
@@ -1164,17 +1172,16 @@ paths:
                         ""
             tags: ["WorkflowTask"]
     "/workflow-tasks/assignable-users":
-        get:
-            operationId: getWorkflowTaskAssignableUser
-            parameters:
-                - in: query
-                  name: workflowTaskIds
-                  required: true
-                  schema:
-                      items:
-                          format: int64
-                          type: integer
-                      type: array
+        post:
+            operationId: postWorkflowTaskAssignableUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/WorkflowTaskIds"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/WorkflowTaskIds"
             responses:
                 200:
                     content:
